@startuml Tasque database schema

entity users {
    * id : uuid
    * username : varchar(16)
    * email : varchar(64)
    * first_name : varchar(32)
    last_name : varchar(64)
    profile_picture : varchar(128)
    * password : varchar(4096)
    email_verified_at : timestamp
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
    --
    unique(username)
    unique(email)
}

entity teams {
    * id : uuid
    * name : varchar(32)
    description: varchar(1024)
    profile_picture : varchar(128)
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
    --
}

entity team_members {
    * id : uuid
    * user_id : uuid
    * team_id : uuid
    * role : enum('OWNER', 'EDITOR', 'VIEWER')
    * created_at : timestamp
    * updated_at : timestamp
    --
    unique(user_id, team_id)
}

entity user_team_invitations {
    * id : uuid
    * from_user_id : uuid
    * to_user_id : uuid
    * team_id : uuid
    * role : enum('EDITOR', 'VIEWER')
    is_accepted : boolean
    responded_at : timestamp
    cancelled_at : timestamp
    * created_at : timestamp
    * updated_at : timestamp
    --
    unique(from_user_id, to_user_id, team_id)
}

entity boards {
    * id : uuid
    * name : varchar(64)
    description : varchar(1024)
    banner_picture : varchar(128)
    color_hex : varchar(7)
    * owner_id : uuid
    * owner_type : varchar(32)
    * created_at : timestamp
    * updated_at : timestamp
    deleted_at : timestamp
    --
}

entity columns {
    * id : uuid
    * position: bigint
    * board_id : uuid
    * name : varchar(64)
    description : varchar(128)
    color_hex : varchar(7)
    * created_at : timestamp
    * updated_at : timestamp
    --
}

entity cards {
    * id : uuid
    * column_id : uuid
    * body : varchar(1024)
    color_hex : varchar(7)
    * created_at : timestamp
    * updated_at : timestamp
    --
}

entity comments {
    * id : uuid
    * user_id : uuid
    * body : varchar(128)
    * context_id : uuid
    * context_type : varchar(32)
    * created_at : timestamp
    * updated_at : timestamp
    --
}

entity histories {
    * id : uuid
    * user_id : uuid
    * action : enum('CREATE', 'UPDATE', 'DELETE')
    * context_id : uuid
    * context_type : varchar(32)
    * context_key : varchar(256),
    context_value_before : text
    context_value_after : text
    * created_at : timestamp
    --
}

users ||--|{ team_members
teams ||--|{ team_members
users ||--|{ user_team_invitations
users ||--|{ user_team_invitations
teams ||--|{ user_team_invitations
boards ||--|{ columns
columns ||--|{ cards
users ||--|{ comments
users ||--|{ histories

@enduml
